name:                cardano-crypto
version:             0.1.0.0
synopsis:            Cryptography primitives for cardano
description:
homepage:            https://github.com/input-output-hk/cardano-crypto#readme
license:             MIT
license-file:        LICENSE
author:              Vincent Hanquez
maintainer:          contact@typed.io
copyright:           2016-2017 IOHK
category:            Crypto
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cardano.Crypto.Wallet
                       Crypto.ECC.Edwards25519
                       Crypto.ECC.Ed25519Donna
  build-depends:       base >= 4.7 && < 5
                     , memory
                     , deepseq
                     , bytestring
                     , cryptonite
                     , cryptonite-openssl >= 0.5
  default-language:    Haskell2010
  C-sources:           cbits/ed25519/ed25519.c
  include-dirs:        cbits/ed25519 cbits

test-suite cardano-crypto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , cardano-crypto
                     , tasty
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/input-output-hk/cardano-crypto
